--- a/react-complete-guide/package.json
+++ b/react-complete-guide/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "radium": "^0.26.0",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "1.1.5",
+    "react-dom": "^16.9.0",§
+    "react-scripts": "^1.1.5",
     "styled-components": "^5.1.1"
   },
   "scripts": {
